- fixed: made sure border beneath header is not visible (see conjoon/app-cn_mail#110)

--- a/sass/src/view/mail/message/MessageGrid.scss
+++ b/sass/src/view/mail/message/MessageGrid.scss
@@ -57,7 +57,7 @@
     }
 
     .x-grid-body {
-        border-width : 1px;
+        border:none;
     }
 
     .x-grid-cell-special{
